--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
