add ielts feature

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,11 @@ GEMINI_API_KEY=
 
 NOTION_DATABASE_TOEIC_ID
 
+# Offshore
 NOTION_OFFSHORE_DATABASE_ID=
+NOTION_OFFSHORE_BASIC_VERB_DATABASE_ID=
+
+# IELTS
+NOTION_WRITING_DB_ID=...
+NOTION_WEAKNESS_DB_ID=...
+NOTION_VOCAB_DB_ID=...
